Use ports for websockets

--- a/index.html
+++ b/index.html
@@ -5,14 +5,24 @@
     <title>Photos App</title>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
-    <script src="build/app.js"></script>
+    <script src="dist/build.js"></script>
 </head>
 <body>
 <div id="main"></div>
 <script>
-    Elm.Photos.init({
+    var app = Elm.Photos.init({
         node: document.getElementById('main'),
     });
+
+    function listen(url) {
+        var websocket = new WebSocket(url);
+
+        websocket.onmessage = function(event) {
+            app.ports.receive.send(event.data);
+        };
+    }
+
+    app.ports.listen.subscribe(listen);
 </script>
 </body>
 </html>
